main photo resized

--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header.sticky .nav-bar {
 }
 
 .home-container .home-img img {
-    width: 90%;
+    width: 70%;
     transform: translate(0, 0);
 }
 
@@ -290,6 +290,7 @@ header.sticky .nav-bar {
     font-weight: 800;
     margin-bottom: 2rem;
     background: linear-gradient(to top, transparent 0%, var(--first-color) 70%);
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: .1;
@@ -822,6 +823,7 @@ footer a {
     font-weight: 600;
     background: linear-gradient(to top, transparent 0%, #fff 50%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     opacity: .8;
 }
