webkit transform on img added

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(255, 255, 255, .5);
+    /* background: rgba(255, 255, 255, .95); */
     -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
     transition: .6s ease;
@@ -236,6 +236,8 @@ header.sticky .nav-bar {
 
 .home-container .home-img img {
     width: 70%;
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
 }
 
@@ -1073,7 +1075,11 @@ footer a {
 
     .home-container .home-img img {
         width: 65%;
-        transform: translate(80px, -180px);
+        -webkit-transform: translate(80px, -180px, -25px);
+        -ms-transform: translate(80px, -180px, -25px);
+        -o-transform: translate(80px, -180px, -25px);
+        -moz-transform: translate(80px, -180px, -25px);
+        transform: translate(80px, -180px, -25px);
     }
 
     .home .home-container .info {
